# jmbde-python

./: .bumpversion.cfg  .codacy.yml  .codecov.yml  .codespellrc  .cookiecutter.json  .coverage 2  .coveragerc  .cspell.json  .devskim.json  .dockerignore  .editorconfig  .eslintignore  .flake8  .fossa.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .gitpod.Dockerfile  .gitpod.yml  .grype.yaml  .hadolint.yml  .htmlhintrc  .markdown-link-check.json  .markdownlint.json  .mega-linter.yml  .mtemp.mega-linter.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pre-commit-output.txt  .prettierignore  .prettierrc.yaml  .pylintrc  .readthedocs.yml  .sqlfluff  .travis.yml  .v8rrc.yaml  .v8rrc.yml  .vale.ini  .yamllint.yml  AUTHORS.md  (+47 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  automerge.yml  branch-name-patterns.yml  config.yml  dependabot.yml  dependency-review-config.yml  devskim-config.json  gitleaks.toml  invite-contributors.yml  labeler.yml  labels.yml  project-config.yml  release-drafter.yml  scorecard-policy.yml  spellcheck-config.json
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-a.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-documentation.yml  config.yml
.github/codeql/: codeql-config.yml
.github/config/: workflow-settings.yml
.github/linters/: .commit-lint.yml
.github/workflows/: add-comment-to-issue.yml  add-issue-header.yml  add-label-to-issue.yml  build.yml  changelog_validate.yml  ci.yml  codacy-analysis.yml  codeq1l.yml  codeql-analysis.yml  codeql.yml  commit-lint.yml  commitlint.yml  constraints.txt  dependabot-merge.yml  dependency-review.yml  devskim-analysis.yml  docs-deploy.yml  i18n.yml  issue-managment.yml  issues.yml  labeler.yml  labels-sync.yml  lock.yml  maintenance.yml  mega-linter.yml  misspell-fixer.yml  mkdocs-pages.yml  opened-issues-triage.yml  ossar-analysis.yml  pages.yml  pr-checks.yml  pr-lint.yaml  pre-commit.yml  release-drafter.yml  release.yml  requirements.txt  reuse-check.yml  scorecard.yml  sonarcloud-analysis.yml  sonarcloud.yml  (+5 more)
.qt_for_python/rcc/: animatedtiles.py  appchooser.py  application.py  basicdrawing.py  books.py  classwizard.py  diagramscene.py  dockwidgets.py  dragdroprobot.py  draggabletext.py  gallery.py  markdowneditor.py  mdi.py  systray.py  textedit.py  textures.py
.qt_for_python/uic/: bookwindow.py  device.py  dialog.py  form.py  mainwindow.py  service.py  themewidget.py
.trunk/: actions  notifications  tools  trunk.yaml
.trunk/plugins/: trunk
LICENSES/: EUPL-1.2.txt
assets/data/: script.sql
assets/translations/: jmbde_ui_ar_DZ.ts  jmbde_ui_bg.ts  jmbde_ui_cs.ts  jmbde_ui_fr.ts  jmbde_ui_hu.ts  jmbde_ui_it.ts  jmbde_ui_ja.ts  jmbde_ui_js.ts  jmbde_ui_pt_PT.ts  jmbde_ui_ru.ts  jmbde_ui_tr.ts  jmbde_ui_uk.ts  jmbde_ui_zh_CN.ts
building/: README.md  version_updater.py
building/Linux/: linux_rpm_build.sh  snapcraft.yml
building/Windows/: jmbde.win.version  windows-setup-inno.iss
building/macOS/: Info.plist  jmbde.dmg.json
conda/: meta.yaml  meta.yml
config/: github-actions.txt
docker/: README.md  docker-compose.yml
docs/: .tox.ini  api-docs.md  conf.py  contributing.rst  environment.yml  index.md  index.rst  project-structure-hints.md  quickstart.md  reference.md  reference.rst  requirements.txt  usage.md
docs/.snippets/: links.txt
docs/about/: EUPL-1.2.md
docs/community/: code_of_conduct.md  contributing.md  faq.md
docs/config/: doc_quality.yml
docs/css/: custom.css
docs/developer/: changelog.md  core.md  overview.md  release-notes.md
docs/en/: api-docs.md  index.md  project-structure-hints.md  security.md
docs/guides/: branches_and_environments.md  commandline.md  install.md
docs/scripts/: doc_quality.py
docs/source/: changelog.rst  conf.py  contributors.rst  index.rst  install_windows.rst  installation.rst  installation_windows.rst  settings.rst  upgrade.rst
jmbde/: __init__.py  __main__.py  _version.py  jmbde_rcc.qrc  logger.py  main.py
jmbde/conda/: meta.yml
jmbde/gui/: app.py  mainwindow.py  resources_rc.py
jmbde/models/: __init__.py  datacontext.py  employee.py
jmbde/views/: MainWindow.py
recipe/: meta.yaml
requirements/: base.txt  dev.txt  test.txt
resources/: resources.qrc  resources_generator.sh  style.qss  translation_files.pro
resources/forms/: employeeinputarea.ui  mainwindow.ui
resources/translations/: ar_DZ.ts  bg.ts  ca_ES.ts  cs.ts  de.ts  en.ts  en_US.ts  es.ts  es_ES.ts  fi.ts  fr.ts  fr_FR.ts  he.ts  hu.ts  it.ts  ja.ts  jmbde_de.ts  jmbde_ui_ar_DZ.ts  jmbde_ui_bg.ts  jmbde_ui_ca_ES.ts  jmbde_ui_cs.ts  jmbde_ui_de.ts  jmbde_ui_en_US.ts  jmbde_ui_es.ts  jmbde_ui_fr.ts  jmbde_ui_he.ts  jmbde_ui_hu.ts  jmbde_ui_it.ts  jmbde_ui_ja.ts  jmbde_ui_js.ts  jmbde_ui_nb.ts  jmbde_ui_nl.ts  jmbde_ui_pl.ts  jmbde_ui_pt.ts  jmbde_ui_pt_PT.ts  jmbde_ui_ru.ts  jmbde_ui_tr.ts  jmbde_ui_uk.ts  jmbde_ui_zh_CN.ts  jmbde_ui_zh_TW.ts  (+10 more)
results/: README.md
scripts/: build.ps1  build_ui.py  check_signals.py  check_translations.py  compile_ressources.sh  compile_ui  compile_ui.sh  doc_quality.py  make  make.bat  make.sh  makeppa.sh  process_translations.py  setup_tmate.sh  translate_docs.py  translation_coverage.py
src/jmbde/: __about__.py  __init__.py  __main.py  __main__.py  _version.py  logger.py  main.py  rcs.py  security.py  utils.py
tests/: __init__.py  api_test.py  basic_test.py  conftest.py  generate_data.py  pytest.ini  test____main___.py  test_basic.py  test_generate_data.py  test_jmbde.py  test_logging.py  test_main.py  test_main_app.py
tests/core/: __init__.py
tests/e2e/: test_full_workflow.py
tests/integration/: test_api.py  test_database.py  test_employee_model_qml.py
tests/models/: __init__.py  test_datacontext.py
tests/pyside6/: capture_screenshots.py  compare_screenshots.py  test_button_click.py  test_dialog.py  test_gui_interaction.py  test_signal_emission.py  test_visual_regression.py  unsafeconnection.py
tests/unit/: test_database.py  test_database_failure.py  test_device_model.py  (+2 more)
(+161 files in other folders)
