# SPDX-License-Identifier: EUPL-1.2
# SPDX-FileCopyrightText: 2023-present Jürgen Mülbert <juergen.muelbert@outlook.de>
#
[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "jmbde"
dynamic = ["version"]
description = "JM BDE - Management of the inventory the computer equipment"
readme = "README.md"
requires-python = ">=3.9"
license = "EUPL-1.2"
maintainers = [
  { name = "Jürgen Mülbert" },
  { email = "juergen.muelbert@outlook.de" },
]
authors = [{ name = "Jürgen Mülbert", email = "juergen.muelbert@outlook.de" }]
# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: EUPL-1.2",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Office/Business",
]

# Keywords description: https://python-poetry.org/docs/pyproject/#keywords
keywords = [
  "jmbde",
  "business-data-extraction",
  "BDE",
  "database",
  "python-tool",
]

dependencies = [
  "click>=8.0",
  "pyside6>=6.5.0",
  "pydantic>=2.10.3",
  "sqlalchemy>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/jmuelbert/jmbde-python"
Documentation = "https://jmuelbert.github.io/jmbde-python/"
Repository = "https://github.com/jmuelbert/jmbde-python.git"
Issues = "https://github.com/jmuelbert/jmbde-python/issues"
Changelog = "https://github.com/jmuelbert/jmbde-python/blob/main/CHANGELOG.md"
Source = "https://github.com/jmuelbert/jmbde-python"

[project.scripts]
jmbde = "jmbde.__main:main"

[tool.hatch.version]
path = "src/jmbde/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/jmbde"]
macos-max-compat = true

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-cov"]

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.test]
dependencies = [
  "coverage>=6.2",,
  "pytest>=7.4.0",
  "pytest-qt>=4.0.0",
  "pytest-xvfb>=3.0.0",
  "pytest-cov>=4.1.0",
  "pytest-timeout>=2.3.1",
  "pytest-randomly>=3.15.0",
  "typeguard>=4.1.5",
  "xdoctest>=0.15.10",
]

[tool.hatch.envs.test.scripts]
test = "pytest tests/ {args}"
cov = "pytest --cov-report=xml --cov-report=html --cov-report=term-missing --cov=src tests/"
typeguard = "pytest --typeguard-packages=src"
doctest = "pytest --doctest-modules"

[tool.hatch.envs.lint]
dependencies = [
    "pre-commit>=3.6.0",
    "ruff>=0.3.0",
    "black>=24.2.0",
    "mypy>=1.8.0",
    "pylint>=3.0.0",
    "pylint-pytest>=1.1.2",
    "bandit>=1.7.8",
    "isort>=5.13.2",
    "yamllint>=1.35.1",
    "codespell>=2.3.0",
    "commitlint-pre-commit>=9.20.0",
    "pip-audit>=2.7.3",
    "pyupgrade>=3.19.1",
    "markdownlint-cli>=0.39.0",
    "actionlint>=1.7.6",
    "reuse>=5.0.2",
    "gitleaks>=8.22.1",
]

[tool.hatch.envs.lint.scripts]
style = [
    "ruff check .",
    "ruff format .",
    "black --check .",
    "isort --check-only .",
    "pyside6-qmllint src/jmbde/qml/**"
]
typing = "mypy src tests"
security = ["bandit -c pyproject.toml -r src", "pip-audit"]
lint = "pylint src tests"
spelling = "codespell"
markdown = "markdownlint **/*.md"
license = "reuse lint"
all = ["style", "typing", "security", "lint", "spelling", "markdown", "license"]

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs>=1.5.3",
  "mkdocs-material>=9.5.1",
  "mkdocs-static-i18n>=1.2.2",
  "mkdocs-click>=0.8.1",
  "mkdocs-minify-plugin>=0.8.0",
  "mkdocs-mermaid2-plugin>=1.2.0",                    # Mermaid support
  "mkdocs-git-revision-date-localized-plugin>=1.2.0", # Gitdatum support
  "mkdocs-glightbox>=0.4.0",
  "mike>=2.1.3",
  "mkdocstrings-python>=1.7.5",
  "pymdown-extensions>=10.13",
  "mkdocs-minify-plugin>=0.7.1",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"
deploy = "mkdocs gh-deploy --force"

[tool.coverage.run]
branch = true
parallel = true
source_pkgs = ["jmbde", "tests"]
omit = ["src/jmbde/__about__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80                                                               # Updated to a more ambitious threshold.
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.ruff]
fix = true

[tool.ruff.format]
docstring-code-line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "B027",   # Allow non-abstract empty methods in abstract base classes.
  "S101",   # Allow `assert` usage for testing.
  "SIM105", # Suppress complex contextlib suggestions.
  "RET503", # Missing explicit return at the end of functions.
  "RET504", # Unnecessary assignments after return.
  "RET505", # Unnecessary else after return.
  "RET506", # Unnecessary elif after raise.
  "S105",
  "S106",   # Ignore password warnings.
  "RUF012", # Ignore mutable class attribute annotations.
  "UP007",  # Suppress type annotation updates for older versions.
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "FBT", "INP001", "D", "S603", "PLR2004"]
"*.py" = ["Q000"]                                                   # Example: Ignore specific PyQt warnings

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
targets = ["src"]
skips = ["B101"]

[tool.gitleaks]
enable-rules = [
    "generic-api-key",
    "python-password",
    "pyside-secret"
]
allow-paths = [
    "assets/translations/**",
    "LICENSES/**",
    "tests/**"
]

[tool.black]
target-version = ['py311']
line-length = 88

[tool.markdownlint]
MD013 = false  # Line length
MD033 = false  # Inline HTML
MD041 = false  # First line in file should be a top level

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--strict-markers", "--strict-config", "--doctest-modules"]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.yamllint]
extends = "default"
strict = true
ignore = [
    ".github/workflows/",
    "LICENSES/",
    "assets/translations/"
]

[tool.yamllint.rules]
document-start = "enable"
line-length = { max = 100, allow-non-breakable-inline-mappings = true }
quoted-strings = { quote-type = "double", required = false }
truthy = { allowed-values = ["true", "false"] }

[tool.xdoctest]
style = "google"

[tool.pylint]
max-args = 12
max-branches = 20 # Reduced to encourage simpler methods.
max-returns = 6 # Lowered to improve code clarity.
max-statements = 50 # Maximum number of nested blocks for function / method body
max-nested-blocks = 5
disable = [
  "C0111", # missing-docstring
  "C0103", # invalid-name
  "C0330", # wrong-hanging-indentation
]

[tool.codespell]
skip = """
    .git,
    .venv,
    *.png,
    *.gif,
    *.jpg,
    *.svg,
    *.ui,
    *.qrc,
    *.ts,
    LICENSE,
    LICENSES/*,
    dist/*,
    build/*,
    __pycache__/*,
    *.pyc
"""
# Qt and project-specific terms
dictionary = [
    ".github/config/german-words.txt",
    ".github/config/python-words.txt",
    ".github/config/project-words.txt"
]
ignore-words-list = """
    jmbde,pyside,pytest,pyqt,qtodotxt,
    args,kwargs,repr,str,int,bool,dict,lst,idx,
    varchar,uuid,datetime,
    qml,qmake,qrc,uic,rcc,
    conf,config,dev,docs,env,lib,pkg,src,tmp,utils,
    qabstractitemmodel,qaction,qapplication,qcombobox,
    qdialog,qicon,qlabel,qlayout,qlineedit,qmainwindow,
    qmenu,qmenubar,qmessagebox,qobject,qpushbutton,
    qspinbox,qstandarditem,qstandarditemmodel,qstatusbar,
    qtableview,qtoolbar,qwidget,shiboken
"""
check-filenames = true
check-hidden = false
builtin = clear,rare,code,informal
quiet-level = 3
count = true
uri = true
uri-ignore-length = 20
encoding = "utf-8"

[tool.proselint]
max-line-length = 100
checks = [
  "typography.diacritical_marks",
  "typography.exclamation",
  "typography.quotes",
  "misc.annotations",
  "misc.link_review",
  "security.password",
  "spelling.able_atable",
  "spelling.able_ible",
  "spelling.athletes",
  "spelling.em_im_en_in",
  "spelling.er_or",
  "spelling.in_un",
  "spelling.misc",
  "consistency.spacing",
  "consistency.spelling",
]

[tool.typos]
type = "commonmistakes"
default.extend-identifiers = [
  "Pyside", # Correct: PySide
  "Pyqt",   # Correct: PyQt
]
default.extend-words = [
  "cant",  # Correct: can't
  "dont",  # Correct: don't
  "isnt",  # Correct: isn't
  "wasnt", # Correct: wasn't
]
files.extend-exclude = ["LICENSES/*", "*.ui", "*.qrc", "*.ts"]

[tool.yamllint]
extends = "default"
strict = true

rules = {
    document-start = {
        # Only override non-default settings
    },
line-length = {
        max = 100,  # Stricter than defaultallow-non-breakable-words = true,
    },
quoted-strings = {
        quote-type = "double",  # Enforce double quotesrequired = false,
    },
truthy = {
        allowed-values = ["true", "false"],  # Strict boolean values    }
}

present = true                                                               # Enforce document start marker
allow-non-breakable-inline-mappings = true
extra-required = ["^[ ]*password:.*$", "^[ ]*.*secret.*$", "^[ ]*token:.*$"]
check-keys = true
ignore = ["LICENSES/", ".github/workflows/", "assets/translations/"]

[tool.sqlfluff]
dialect = ansi
